Add use case testing and export functionality